[레거시 코드 리팩터링 - 2단계] 하디(전동혁) 미션 제출합니다. (#574)
* refactor: @ExtendWith(MockitoExtension.class) 상위 클래스로 분리

* refactor: 어노테이션으로 클래스 분리

* refactor: product 패키지 분리

* feat: ProductPrice 테스트 및 구현

* feat: ProductName 테스트 및 구현

* refactor: Product 값 객체 적용

* refactor: ProductCreateDto 설계 및 적용

* refactor: Product 동등성 비교 추가

* feat: ProductCreateRequest 추가

* feat: ProductDto 추가

* refactor: ProductCreateRequest 제거

* refactor: Menu 패키지 분리

* feat: 메뉴그룹 값 객체 테스트 및 구현

* refactor: 메뉴 그룹 setter 제거 및 MenuGroupName 적용

* refactor: MenuGroupCreateDto 적용 및 리팩토링

* refactor: MenuGroupDto 적용 및 리팩토링

* refactor: dto final keyword 추가

* refactor: Menu -> menu 패키지 이름 수정

* refactor: order 패키지 설계 및 클래스 이동

* refactor: MenuGroupCreateDto -> CreateMenuGroupDto로 이름 변경

* refactor: ProductCreateDto -> CreateProductDto로 이름 변경

* refactor: dto final 키워드 제거

* refactor: MenuGroup JPA로 이전

* refactor: Product JPA로 이전

* refactor: ProductRepository 패키지 이동

* refactor: ProductPrice 생성자 추가 및 예외 메시지 추가

* feat: MenuPrice 테스트 및 구현

* feat: MenuName 테스트 및 구현

* refactor: MenuGroupRepository 패키지 이동

* refactor: MenuProductQuantity 테스트 및 구현

* feat: MenuProduct 테스트 및 구현

* feat: Menu 테스트 및 구현

* feat: MenuRepository 테스트 및 구현

* refactor: MenuService JPA로 이전 및 테스트 수정 및 DTO 설계

* refactor: Request Response 수정

* delete: 메뉴 연관 DAO 제거

* feat: GuestNumber 테스트 및 구현

* refactor: MenuRepository 메서드 이름 변경

* refactor: OrderTable JPA로 이전 및 테스트

* feat: OrderTableService DTO 구현

* refactor: TableService 테스트 및 코드 리팩토링

* refactor: Request, Response Dto로 변경

* feat: OrderTable 목록 조회 메서드 구현

* refactor: 주문테이블 검증 변경

* refactor: 테이블 그룹 테스트 및 리팩토링

* refactor: Request, Response 및 메서드 아규먼트 도메인 -> DTO 변경

* refactor: DAO에서 TableGroupRepository로 변경

* refactor: ungroup시 후처리 로직 변경

* refactor: TableGroupService 테스트 및 프로덕션 코드 리팩토링

* feat: OrderLineItemQuantity 테스트 및 구현

* refactor: 주문테이블에 주문 추가 메서드 변경

* refactor: 주문테이