@@ -1,72 +1,58 @@
 package kitchenpos.application;
 
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderTableDao;
-import kitchenpos.dao.TableGroupDao;
-import kitchenpos.domain.OrderStatus;
-import kitchenpos.domain.OrderTable;
-import kitchenpos.domain.TableGroup;
+import kitchenpos.application.dto.CreateOrderTableIdDto;
+import kitchenpos.application.dto.CreateTableGroupDto;
+import kitchenpos.application.dto.OrderTableDto;
+import kitchenpos.application.dto.TableGroupDto;
+import kitchenpos.domain.order.GuestNumber;
+import kitchenpos.domain.order.Order;
+import kitchenpos.domain.order.OrderTable;
+import kitchenpos.domain.order.TableGroup;
+import kitchenpos.exception.OrderTableException;
+import kitchenpos.exception.TableGroupException;
+import kitchenpos.repository.OrderTableRepository;
+import kitchenpos.repository.TableGroupRepository;
 import org.assertj.core.api.Assertions;
 import org.assertj.core.api.SoftAssertions;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.BDDMockito;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@ExtendWith(MockitoExtension.class)
 class TableGroupServiceTest extends MockServiceTest {
 
     @InjectMocks
     private TableGroupService tableGroupService;
 
     @Mock
-    private OrderDao orderDao;
+    private OrderTableRepository orderTableRepository;
 
     @Mock
-    private OrderTableDao orderTableDao;
-
-    @Mock
-    private TableGroupDao tableGroupDao;
+    private TableGroupRepository tableGroupRepository;
 
     @Test
     void 테이블그룹을_추가한다() {
         // given
-        /*
-        tableGroupService.create 의 argument 설정
-         */
-        OrderTable argumentFirstOrderTable = new OrderTable();
-        argumentFirstOrderTable.setId(1L);
-        OrderTable argumentSecondOrderTable = new OrderTable();
-        argumentSecondOrderTable.setId(2L);
+        OrderTable firstOrderTable = new OrderTable(new GuestNumber(1), true);
+        OrderTable secondOrderTable = new OrderTable(new GuestNumber(1), true);
 
-        TableGroup argumentTableGroup = new TableGroup();
-        argumentTableGroup.setOrderTables(List.of(argumentFirstOrderTable, argumentSecondOrderTable));
+        BDDMockito.given(orderTableRepository.findAllByIdIn(BDDMockito.anyCollection()))
+                .willReturn(List.of(firstOrderTable, secondOrderTable));
 
-        /*
-        orderTableDao.findAllByIdIn 의 반환 값 설정
-         */
-        OrderTable mockReturnFirstOrderTable = new OrderTable();
-        mockReturnFirstOrderTable.setId(1L);
-        mockReturnFirstOrderTable.setEmpty(true);
-        OrderTable mockReturnSecondOrderTable = new OrderTable();
-        mockReturnSecondOrderTable.setId(2L);
-        mockReturnSecondOrderTable.setEmpty(true);
-        BDDMockito.given(orderTableDao.findAllByIdIn(BDDMockito.anyList()))
-                .willReturn(List.of(mockReturnFirstOrderTable, mockReturnSecondOrderTable));
-
-        BDDMockito.given(tableGroupDao.save(argumentTableGroup))
-                .willReturn(argumentTableGroup);
+        CreateTableGroupDto createTableGroupDto
+                = new CreateTableGroupDto(List.of(
+                new CreateOrderTableIdDto(1L),
+                new CreateOrderTableIdDto(2L)));
 
         // when
-        TableGroup actual = tableGroupService.create(argumentTableGroup);
+        TableGroupDto actual = tableGroupService.create(createTableGroupDto);
         List<Boolean> actualOrderTableEmpty = actual.getOrderTables().stream()
-                .map(OrderTable::isEmpty)
+                .map(OrderTableDto::getEmpty)
                 .collect(Collectors.toList());
 
         // then
@@ -79,171 +65,126 @@ class TableGroupServiceTest extends MockServiceTest {
     @Test
     void 테이블그룹을_추가할_때_주문테이블이_포함되어_있지_않으면_예외를_던진다() {
         // given
-        TableGroup tableGroup = new TableGroup();
-        tableGroup.setId(1L);
+        BDDMockito.given(orderTableRepository.findAllByIdIn(BDDMockito.anyCollection()))
+                .willReturn(Collections.emptyList());
+
+        CreateTableGroupDto createTableGroupDto
+                = new CreateTableGroupDto(Collections.emptyList());
 
         // when, then
-        Assertions.assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-                .isInstanceOf(IllegalArgumentException.class);
+        Assertions.assertThatThrownBy(() -> tableGroupService.create(createTableGroupDto))
+                .isInstanceOf(TableGroupException.class);
     }
 
     @Test
     void 테이블그룹을_추가할_때_주문테이블이_2개_미만이면_예외를_던진다() {
         // given
-        OrderTable orderTable = new OrderTable();
-        orderTable.setId(1L);
+        OrderTable firstOrderTable = new OrderTable(new GuestNumber(1), true);
 
-        TableGroup tableGroup = new TableGroup();
-        tableGroup.setId(1L);
-        tableGroup.setOrderTables(List.of(orderTable));
+        BDDMockito.given(orderTableRepository.findAllByIdIn(BDDMockito.anyCollection()))
+                .willReturn(List.of(firstOrderTable));
+
+        CreateTableGroupDto createTableGroupDto
+                = new CreateTableGroupDto(List.of(
+                new CreateOrderTableIdDto(1L)));
 
         // when, then
-        Assertions.assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-                .isInstanceOf(IllegalArgumentException.class);
+        Assertions.assertThatThrownBy(() -> tableGroupService.create(createTableGroupDto))
+                .isInstanceOf(TableGroupException.class);
     }
 
     @Test
     void 테이블그룹을_추가할_때_주문테이블이_존재하지_않는_주문테이블이면_예외를_던진다() {
         // given
-        OrderTable firstOrderTable = new OrderTable();
-        firstOrderTable.setId(1L);
-        OrderTable secondOrderTable = new OrderTable();
-        secondOrderTable.setId(2L);
+        BDDMockito.given(orderTableRepository.findAllByIdIn(BDDMockito.anyCollection()))
+                .willReturn(Collections.emptyList());
 
-        TableGroup tableGroup = new TableGroup();
-        tableGroup.setId(1L);
-        tableGroup.setOrderTables(List.of(firstOrderTable, secondOrderTable));
-
-        OrderTable mockReturnFirstOrderTable = new OrderTable();
-        mockReturnFirstOrderTable.setId(1L);
-        mockReturnFirstOrderTable.setEmpty(true);
-        BDDMockito.given(orderTableDao.findAllByIdIn(
-                        List.of(firstOrderTable.getId(), secondOrderTable.getId())))
-                .willReturn(
-                        List.of(mockReturnFirstOrderTable));
+        CreateTableGroupDto createTableGroupDto
+                = new CreateTableGroupDto(List.of(
+                new CreateOrderTableIdDto(1L),
+                new CreateOrderTableIdDto(2L)));
 
         // when, then
-        Assertions.assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-                .isInstanceOf(IllegalArgumentException.class);
+        Assertions.assertThatThrownBy(() -> tableGroupService.create(createTableGroupDto))
+                .isInstanceOf(OrderTableException.class);
     }
 
     @Test
     void 테이블그룹을_추가할_때_주문테이블이_주문이_가능한_상태이면_예외를_던진다() {
         // given
-        OrderTable firstOrderTable = new OrderTable();
-        firstOrderTable.setId(1L);
-        OrderTable secondOrderTable = new OrderTable();
-        secondOrderTable.setId(2L);
+        OrderTable firstOrderTable = new OrderTable(new GuestNumber(1), false);
+        OrderTable secondOrderTable = new OrderTable(new GuestNumber(1), true);
 
-        TableGroup tableGroup = new TableGroup();
-        tableGroup.setId(1L);
-        tableGroup.setOrderTables(List.of(firstOrderTable, secondOrderTable));
+        BDDMockito.given(orderTableRepository.findAllByIdIn(BDDMockito.anyCollection()))
+                .willReturn(List.of(firstOrderTable, secondOrderTable));
 
-        OrderTable mockReturnFirstOrderTable = new OrderTable();
-        mockReturnFirstOrderTable.setId(1L);
-        mockReturnFirstOrderTable.setEmpty(false);
-        OrderTable mockReturnSecondOrderTable = new OrderTable();
-        mockReturnSecondOrderTable.setId(2L);
-        mockReturnSecondOrderTable.setEmpty(true);
-
-        BDDMockito.given(orderTableDao.findAllByIdIn(
-                        List.of(firstOrderTable.getId(), secondOrderTable.getId())))
-                .willReturn(
-                        List.of(mockReturnFirstOrderTable, mockReturnSecondOrderTable));
+        CreateTableGroupDto createTableGroupDto
+                = new CreateTableGroupDto(List.of(
+                new CreateOrderTableIdDto(1L),
+                new CreateOrderTableIdDto(2L)));
 
         // when, then
-        Assertions.assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-                .isInstanceOf(IllegalArgumentException.class);
+        Assertions.assertThatThrownBy(() -> tableGroupService.create(createTableGroupDto))
+                .isInstanceOf(TableGroupException.class);
     }
 
     @Test
     void 테이블그룹을_추가할_때_주문테이블이_이미_다른_테이블_그룹에_속해있으면_예외를_던진다() {
         // given
-        OrderTable firstOrderTable = new OrderTable();
-        firstOrderTable.setId(1L);
-        OrderTable secondOrderTable = new OrderTable();
-        secondOrderTable.setId(2L);
+        OrderTable firstOrderTable = new OrderTable(new GuestNumber(1), true);
+        firstOrderTable.changeTableGroup(new TableGroup(LocalDateTime.now()));
+        OrderTable secondOrderTable = new OrderTable(new GuestNumber(1), true);
 
-        TableGroup tableGroup = new TableGroup();
-        tableGroup.setId(1L);
-        tableGroup.setOrderTables(List.of(firstOrderTable, secondOrderTable));
+        BDDMockito.given(orderTableRepository.findAllByIdIn(BDDMockito.anyCollection()))
+                .willReturn(List.of(firstOrderTable, secondOrderTable));
 
-        OrderTable mockReturnFirstOrderTable = new OrderTable();
-        mockReturnFirstOrderTable.setId(1L);
-        mockReturnFirstOrderTable.setEmpty(true);
-        OrderTable mockReturnSecondOrderTable = new OrderTable();
-        mockReturnSecondOrderTable.setTableGroupId(100L);
-        mockReturnSecondOrderTable.setId(2L);
-        mockReturnSecondOrderTable.setEmpty(true);
-
-        BDDMockito.given(orderTableDao.findAllByIdIn(
-                        List.of(firstOrderTable.getId(), secondOrderTable.getId())))
-                .willReturn(
-                        List.of(mockReturnFirstOrderTable, mockReturnSecondOrderTable));
+        CreateTableGroupDto createTableGroupDto
+                = new CreateTableGroupDto(List.of(
+                new CreateOrderTableIdDto(1L),
+                new CreateOrderTableIdDto(2L)));
 
         // when, then
-        Assertions.assertThatThrownBy(() -> tableGroupService.create(tableGroup))
-                .isInstanceOf(IllegalArgumentException.class);
+        Assertions.assertThatThrownBy(() -> tableGroupService.create(createTableGroupDto))
+                .isInstanceOf(TableGroupException.class);
     }
 
     @Test
     void 테이블그룹을_삭제하면_주문테이블이_주문이_가능한_상태로_바뀌고_테이블_그룹_아이디가_null_로_바뀐다() {
         // given
-        Long tableGroupId = 1L;
+        OrderTable firstOrderTable = new OrderTable(new GuestNumber(1), true);
+        OrderTable secondOrderTable = new OrderTable(new GuestNumber(1), true);
 
-        OrderTable mockReturnFirstOrderTable = new OrderTable();
-        mockReturnFirstOrderTable.setId(1L);
-        mockReturnFirstOrderTable.setEmpty(true);
-        OrderTable mockReturnSecondOrderTable = new OrderTable();
-        mockReturnSecondOrderTable.setTableGroupId(100L);
-        mockReturnSecondOrderTable.setId(2L);
-        mockReturnSecondOrderTable.setEmpty(true);
-        BDDMockito.given(orderTableDao.findAllByTableGroupId(tableGroupId))
-                .willReturn(List.of(mockReturnFirstOrderTable, mockReturnSecondOrderTable));
-
-        BDDMockito.given(
-                        orderDao.existsByOrderTableIdInAndOrderStatusIn(
-                                List.of(mockReturnFirstOrderTable.getId(), mockReturnSecondOrderTable.getId()),
-                                Arrays.asList(OrderStatus.COOKING.name(), OrderStatus.MEAL.name())
-                        ))
-                .willReturn(false);
+        BDDMockito.given(tableGroupRepository.existsById(BDDMockito.anyLong()))
+                .willReturn(true);
+        BDDMockito.given(orderTableRepository.findAllByTableGroupIdWithOrders(BDDMockito.anyLong()))
+                .willReturn(List.of(firstOrderTable, secondOrderTable));
 
         // when
-        tableGroupService.ungroup(tableGroupId);
+        tableGroupService.ungroup(1L);
 
         // then
         SoftAssertions softAssertions = new SoftAssertions();
-        softAssertions.assertThat(mockReturnFirstOrderTable.getTableGroupId()).isNull();
-        softAssertions.assertThat(mockReturnSecondOrderTable.getTableGroupId()).isNull();
-        softAssertions.assertThat(mockReturnFirstOrderTable.isEmpty()).isFalse();
-        softAssertions.assertThat(mockReturnSecondOrderTable.isEmpty()).isFalse();
+        softAssertions.assertThat(firstOrderTable.getEmpty()).isFalse();
+        softAssertions.assertThat(firstOrderTable.getTableGroup()).isNull();
+        softAssertions.assertThat(secondOrderTable.getEmpty()).isFalse();
+        softAssertions.assertThat(secondOrderTable.getTableGroup()).isNull();
         softAssertions.assertAll();
     }
 
     @Test
     void 테이블그룹을_삭제할_때_주문테이블_내에_존재하는_주문들_중_COOKING_또는_MEAL_상태가_존재하면_예외를_던진다() {
         // given
-        Long tableGroupId = 1L;
+        OrderTable firstOrderTable = new OrderTable(new GuestNumber(1), false);
+        Order order = new Order(LocalDateTime.now());
+        firstOrderTable.addOrder(order);
 
-        OrderTable mockReturnFirstOrderTable = new OrderTable();
-        mockReturnFirstOrderTable.setId(1L);
-        mockReturnFirstOrderTable.setEmpty(true);
-        OrderTable mockReturnSecondOrderTable = new OrderTable();
-        mockReturnSecondOrderTable.setTableGroupId(100L);
-        mockReturnSecondOrderTable.setId(2L);
-        mockReturnSecondOrderTable.setEmpty(true);
-        BDDMockito.given(orderTableDao.findAllByTableGroupId(tableGroupId))
-                .willReturn(List.of(mockReturnFirstOrderTable, mockReturnSecondOrderTable));
-
-        BDDMockito.given(
-                        orderDao.existsByOrderTableIdInAndOrderStatusIn(
-                                List.of(mockReturnFirstOrderTable.getId(), mockReturnSecondOrderTable.getId()),
-                                Arrays.asList(OrderStatus.COOKING.name(), OrderStatus.MEAL.name())
-                        ))
+        BDDMockito.given(tableGroupRepository.existsById(BDDMockito.anyLong()))
                 .willReturn(true);
+        BDDMockito.given(orderTableRepository.findAllByTableGroupIdWithOrders(BDDMockito.anyLong()))
+                .willReturn(List.of(firstOrderTable));
 
         // when, then
-        Assertions.assertThatThrownBy(() -> tableGroupService.ungroup(tableGroupId))
-                .isInstanceOf(IllegalArgumentException.class);
+        Assertions.assertThatThrownBy(() -> tableGroupService.ungroup(1L))
+                .isInstanceOf(OrderTableException.class);
     }
 }
